# AdventOfCode-Rust

./: Cargo.toml
src/: lib.rs
src/calendar/2022/01/: main.rs
src/calendar/2022/01_CalorieCounting/: main.rs
src/calendar/2022/02_RockPaperScissors/: main.rs
src/calendar/2022/03_RucksackReorganization/: main.rs
src/calendar/2022/04_CampCleanup/: main.rs
src/calendar/2022/05_SupplyStacks/: main.rs
src/calendar/2022/06_TuningTrouble/: main.rs
src/calendar/2022/07_NoSpaceLeftOnDevice/: data.rs  errors.rs  main.rs  parser.rs
src/calendar/2022/08_TreetopTreeHouse/: errors.rs  main.rs  trees.rs
src/calendar/2022/09_RopeBridge/: error.rs  geometry.rs  main.rs
src/calendar/2023/01_Trebuchet/: main.rs
src/calendar/2023/02_CubeConundrum/: main.rs
src/calendar/2023/03_GearRatios/: main.rs
src/calendar/2023/04_Scratchcards/: main.rs
src/calendar/2023/05_IfYouGiveASeedAFertilizer/: main.rs
src/calendar/2024/01_HistorianHisteria/: main.rs
src/calendar/2025/01_SecretEntrance/: main.rs
src/calendar/2025/02_GiftShop/: main.rs
src/calendar/2025/03_Lobby/: main.rs
