[package]
name = "advent_of_code"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Binaries for 2022
[[bin]]
name = "aoc_2022_01"
path = "src/calendar/2022/01_CalorieCounting/main.rs"

[[bin]]
name = "aoc_2022_02"
path = "src/calendar/2022/02_RockPaperScissors/main.rs"

[[bin]]
name = "aoc_2022_03"
path = "src/calendar/2022/03_RucksackReorganization/main.rs"

[[bin]]
name = "aoc_2022_04"
path = "src/calendar/2022/04_CampCleanup/main.rs"

[[bin]]
name = "aoc_2022_05"
path = "src/calendar/2022/05_SupplyStacks/main.rs"

[[bin]]
name = "aoc_2022_06"
path = "src/calendar/2022/06_TuningTrouble/main.rs"

[[bin]]
name = "aoc_2022_07"
path = "src/calendar/2022/07_NoSpaceLeftOnDevice/main.rs"

[[bin]]
name = "aoc_2022_08"
path = "src/calendar/2022/08_TreetopTreeHouse/main.rs"

[[bin]]
name = "aoc_2022_09"
path = "src/calendar/2022/09_RopeBridge/main.rs"

# Binaries for 2023
[[bin]]
name = "aoc_2023_01"
path = "src/calendar/2023/01_Trebuchet/main.rs"

[[bin]]
name = "aoc_2023_02"
path = "src/calendar/2023/02_CubeConundrum/main.rs"

[[bin]]
name = "aoc_2023_03"
path = "src/calendar/2023/03_GearRatios/main.rs"

[[bin]]
name = "aoc_2023_04"
path = "src/calendar/2023/04_Scratchcards/main.rs"

[[bin]]
name = "aoc_2023_05"
path = "src/calendar/2023/05_IfYouGiveASeedAFertilizer/main.rs"

[[bin]]
name = "aoc_2024_01"
path = "src/calendar/2024/01_HistorianHisteria/main.rs"

[[bin]]
name = "aoc_2025_01"
path = "src/calendar/2025/01_SecretEntrance/main.rs"

[dependencies]
itertools = "0.13.0"
lazy_static = "1.5.0"
regex = "1.11.1"
enumset = "1.1.5"
thiserror = "2.0.4"

[profile.release-with-debug]
inherits = "release"
debug = true
